--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
                         <li><a href="Guitarras.html">Guitarras</a></li>
                         <li><a href="Bajos.html">Bajos</a></li>
                         <li><a href="Vientos.html">Vientos</a></li>
-                        <li><a href="Teclados.html">Teclados</a></li>
+                        <li><a href="Teclado.html">Teclados</a></li>
                         <li><a href="Percusion.html">Percusión</a></li>
                     </ul>
                 </li>
