--- a/Reparación.html
+++ b/Reparación.html
@@ -48,12 +48,12 @@
     </div>
 <main>
   </span>
-    <p>El taller trabaja en la reparación, restauración y mantenimiento de instrumentos musicales de cuerda pulsada, 
+    <h6>El taller trabaja en la reparación, restauración y mantenimiento de instrumentos musicales de cuerda pulsada, 
         tanto acústicos como eléctricos. A partir de la experiencia y conocimiento de Carlos Gardel, quien disfruta y 
         continúa haciéndolo, ha conformado un equipo responsable y comprometido que atiende las necesidades de cada cliente. 
         Además de un gran número de músicos particulares, el taller funciona para escuelas de música, conservatorios, guitarrerías 
         y es Casa de Servicio Oficial de Yamaha Argentina para sus guitarras y bajos.
-    </p>
+    </h6>
     <a href="Contacto.html">
         <button>Contactanos</button>
     </a>
